# blieng

./: .gitignore  CMakeLists.txt  DEPS  LICENSE  Makefile  README  README.md  README.tp  build.sh  meson.build  run_examples.sh  zombiebli.pro
blieng/: CMakeLists.txt  README  auto_map.h  auto_vector.h  bliany.h  blibody.cpp  blibody.h  blidynamicbody.cpp  blidynamicbody.h  blieng.cpp  blieng.h  blieng.pro  bliobject.cpp  bliobject.h  blistaticbody.cpp  blistaticbody.h  bliworld.cpp  bliworld.h  card.cpp  card.h  cdiggins.h  character.cpp  character.h  complex.cpp  complex.h  config.h  configure.cpp  configure.h  data.cpp  data.h  datafile.cpp  datafile.h  eventlog.cpp  eventlog.h  fastlz.c  item.cpp  item.h  json.c  json.cpp  json.h  (+15 more)
blieng/physics/: blibody.h  blidynamicbody.cpp  blidynamicbody.h  blistaticbody.h  bliworld.cpp  bliworld.h
blieng/tests/: Makefile  auto_map_test.cpp  auto_map_test.h  auto_vector_test.cpp  auto_vector_test.h  bliany_test.cpp  bliany_test.h  bliobject_test.cpp  bliobject_test.h  card_test.cpp  card_test.h  character_test.cpp  character_test.h  configure_test.cpp  configure_test.h  data_test.cpp  data_test.h  datafile_test.cpp  datafile_test.h  eventlog_test.cpp  eventlog_test.h  item_test.cpp  logging_test.cpp  maps_test.cpp  maps_test.h  path_test.cpp  path_test.h  point_test.cpp  point_test.h  test_tools.cpp  test_tools.h  testrunner.cpp  tests.pro
data/: items.json  last_names  zomb.json  zombie_items.json
data/maps/world1/: world1.json
data/maps/world2/: world2.json
doc/: config.doxy
examples/: meson.build
examples/data/maps/map1/: map1.json
examples/data_files/: data_example.cpp  meson.build
examples/data_files/data/: example.json  example.txt
examples/world/: meson.build  world_example.cpp
src/: TODO  character.cpp  character.h  data.cpp  data.h  main.cpp  player_character.cpp  player_character.h  src.pro
src/blieng/: bliobject.cpp  bliobject.h  character.cpp  character.h  configure.cpp  configure.h  data.cpp  data.h  eventlog.cpp  eventlog.h  item.cpp  item.h  maps.cpp  maps.h  path.cpp  path.h  player_character.cpp  player_character.h  point.cpp  point.h  town.cpp  town.h  wallclock.cpp  wallclock.h  zombie_character.cpp  zombie_character.h
src/tests/: Makefile  path_test.h  point_test.cpp  point_test.h  testrunner.cpp  tests.pro
src/translations/: Makefile  build_all.sh
src/translations/en_EN/: zombiebli.ts
src/translations/en_US/: zombiebli.ts
src/translations/fi_FI/: zombiebli.ts
src/ui/: characterview.cpp  characterview.h  fightscreen.cpp  fightscreen.h  gamelayout.cpp  gamelayout.h  gamescreen.cpp  gamescreen.h  generate_character.cpp  generate_character.h  imageloader.cpp  imageloader.h  loadingscreen.cpp  loadingscreen.h  mapscreen.cpp  mapscreen.h  startscreen.cpp  startscreen.h  zombcombobox.cpp  zombcombobox.h  zombpushbutton.cpp  zombpushbutton.h  zombstyles.cpp  zombstyles.h
src/zomb/: configure.cpp  configure.h  createworld.cpp  createworld.h  player_character.cpp  player_character.h  worldclock.cpp  worldclock.h  zombie_character.cpp  zombie_character.h
subprojects/: box2d.wrap  gmock.wrap
tests/: CMakeLists.txt  auto_map_test.cpp  auto_vector_test.cpp  bliany_test.h  bliobject_test.cpp  bliobject_test.h  bliphysics_test.cpp  bliphysics_test.h  card_test.cpp  character_test.cpp  character_test.h  complex_test.cpp  complex_test.h  configure_test.cpp  data_test.cpp  datafile_test.cpp  eventlog_test.cpp  item_test.h  logging_test.cpp  logging_test.h  maps_test.cpp  maps_test.h  meson.build  path_test.cpp  path_test.h  point_test.cpp  test_tools.cpp  test_tools.h  testrunner.cpp  tests.pro  town_test.cpp  town_test.h
testtools/: meson.build  test_data.cpp  test_json.cpp
tools/: build.pri  fetch_build.sh
tools/datafile-generator/: datafile-generator.pro  main.cpp  pack_files.sh
tools/item-editor/: datas.cpp  datas.h  editortable.cpp  editortable.h  item-editor.pro  items.cpp  items.h  main.cpp  myscene.cpp  myscene.h  simplebutton.cpp  simplebutton.h
tools/map-editor/: editscreen.cpp  editscreen.h  main.cpp  map-editor.pro  townproperties.cpp  townproperties.h
tools/mxe-build/: jsoncpp-1-build.patch  jsoncpp.mk
tools/mxe-build/dynamic/: jsoncpp-1-build.patch  jsoncpp.mk
tools/mxe-build/static/: jsoncpp.mk
tools/winbuild/: clean.sh  winbuild.sh  winmake.sh  winqmake.sh
