blieng_lib = static_library('blieng',
    'blieng.cpp',
    'card.cpp',
    'character.cpp',
    'configure.cpp',
    'eventlog.cpp',
    'item.cpp',
    'logging.cpp',
    'maps.cpp',
    'path.cpp',
    'point.cpp',
    'town.cpp',
    'wallclock.cpp',
    'data.cpp',
    'datafile.cpp',
    'bliobject.cpp',
    'complex.cpp',
    'fastlz.c',
    'rijndael-alg-fst.c',
    'json.c',
    dependencies : qtcore,
    cpp_args : ['-fPIC', '-std=c++11'],
    include_directories : [
        blieng_inc,
        toplevel_inc
        ]
    )
